# SyncSuite

./: .gitignore  .pre-commit-config.yaml  .pre-commit-yamllint-config.yaml  .yamllint-config.yaml  GUI_add_map.py  GUI_rsync_to_remote.py  GUI_show_log.py  GUI_sync_suite.py  README.md  common.py  create_path_sync.py  file_map.py  file_map.yaml  log_cleanup.py  main.py  pyproject.toml  requirements.txt  rsync_to_remote.py  sync_conf.yaml  synced_file_map.yaml
gui/: cfg_tab.py  fmp_tab.py  gui_cfg.yaml  gui_common.py  log_tab.py  prj_tab.py  r2r_tab.py
icons/: resize_icon.py
pysimplegui/: PySimpleGUI.py
test_files/config/: file_map.yaml  sync_conf.yaml  synced_file_map.yaml
