[tool.poetry]
name = "syncsuite"
version = "0.1.0"
description = ""
authors = ["Marek Paulik <marpauli@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytimedinput = "^2.0.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
